feat: port Java 8 build to normal Forge